# ripples

./: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.rst  Pipfile  README.md  README.rst  conanfile.py  conanfile.txt  flake.nix  waf  wscript
benchmarks/: tim.cc  wscript
conan/memkind/: conanfile.py
conan/memkind/test_package/: conanfile.py  example.cpp
conan/metall/: conanfile.py
conan/networkit/: conanfile.py
conan/nvidia-cub/: conanfile.py
conan/rocThrust/: conanfile.py
conan/trng/: conanfile.py
conan/trng/test_package/: conanfile.py  example.cpp
conan/waf-generator/: conanfile.py
docker/: docker-compose.yml
docker/cuda-dgx/: Dockerfile
docs/: Doxyfile  build.rst  conf.py  conf.py.in  doxygen.conf.in  index.rst
include/: wscript
include/im/: bart.h  bfs.h  bloomfilter.h  configuration.h  diffusion_simulation.h  find_most_influential.h  generate_rrr_sets.h  graph.h  graph_dump.h  imm.h  influence_maximization.h  loaders.h  tim.h  utility.h
include/im/cuda/: cuda_common.cuh  cuda_generate_rrr_sets.h  cuda_graph.cuh  cuda_sequential.h  cuda_utils.h
include/im/mpi/: find_most_influential.h  imm.h
include/ripples/: add_rrrset.h  batched_add_rrrset.h  bitmask.h  configuration.h  counting.h  diffusion_simulation.h  find_most_influential.h  find_most_influential_record.h  generate_rrr_sets.h  generate_rrr_sets_record.h  graph.h  graph_dump.h  hill_climbing.h  hill_climbing_engine.h  imm.h  imm_configuration.h  imm_execution_record.h  imm_interface.h  loaders.h  louvain_imm.h  opimc.h  opimc_configuration.h  opimc_execution_record.h  partition.h  rrr_sets.h  streaming_find_most_influential.h  streaming_rrr_generator.h  tim.h  tim_configuration.h  utility.h
include/ripples/cuda/: cuda_generate_rrr_sets.h  cuda_graph.cuh  cuda_hc_engine.h  cuda_lt_kernel.cuh  cuda_supported_graphs.h  cuda_utils.h  find_most_influential.h  streaming_rrr_generator_omp.h
include/ripples/cuda/from_nvgraph/: bfs.hxx  nvgraph_error.hxx
include/ripples/cuda/from_nvgraph/hc/: bfs.hxx
include/ripples/cuda/from_nvgraph/imm/: bfs.hxx
include/ripples/gpu/: bfs.h  bfs_kernels.h  find_most_influential.h  generate_rrr_sets.h  gpu_graph.h  gpu_runtime_trait.h  gpu_supported_graphs.h  lt_kernel.h
include/ripples/gpu/hip/: bfs.h
include/ripples/mpi/: find_most_influential.h  hill_climbing.h  imm.h  opimc.h  utility.h
scripts/: plots.py
src/: CMakeLists.txt  imm.cc  wscript
src/gpu/: CMakeLists.txt  cuda_utils.cu  find_most_influential.cc  generate_rrr_sets.cc  gpu_graph.cc  lt_kernel.cc  wscript
test/: CMakeLists.txt  community_extraction.cc  cuda_find_most_influential.cc  pivoting.cc  rrr_set_generation.cc  test_main.cc  wscript
test-data/: karate.tsv
test/benchmarks/: CMakeLists.txt  find_most_influential.cc  generate_rr_sets.cc
tools/: CMakeLists.txt  batched_bfs.cc  dump-graph.cc  hill_climbing.cc  imm.cc  influence_maximization.cc  louvain-imm.cc  measure_rrr_size.cc  mpi-hill-climbing.cc  mpi-imm.cc  mpi-opimc.cc  opimc.cc  simulator.cc  tim.cc  wscript
tools/cuda/: cuda_generate_rrr_sets.cc  cuda_generate_rrr_sets.cu  cuda_graph.cu  cuda_hc_engine.cu  cuda_lt_kernel.cu  cuda_sequential.cu  cuda_utils.cu  find_most_influential.cu
tools/cuda/from_nvgraph/: bfs.cu  bfs_kernels.cu
tools/cuda/from_nvgraph/hc/: bfs.cu  bfs_kernels.cu
tools/cuda/from_nvgraph/imm/: bfs.cu  bfs_kernels.cu
waftools/: catch2.py  cli.py  cuda.py  json.py  libjson.py  memkind.py  metall.py  mpi.py  spdlog.py  sphinx.py  trng4.py
